# Rocky

./: .env.example  Readme.md
rocky-engine/: requirements.txt
rocky-engine/src/: main.py  orchestrator.py
rocky-engine/src/api/: auth.py  middleware.py  websocket.py
rocky-engine/src/core/: analyzer.py
rocky-engine/src/domain/: interfaces.py  models.py
rocky-engine/src/infrastructure/: logger.py
rocky-engine/src/infrastructure/audio/: stt_manager.py  tts_manager.py
rocky-engine/src/infrastructure/clients/: groq_client.py
rocky-ui/: next.config.mjs  package-lock.json  package.json
rocky-ui/src-tauri/: Cargo.toml  Untitled  tauri.conf.json
rocky-ui/src-tauri/capabilities/: default.json
rocky-ui/src-tauri/icons/: icon.icns
rocky-ui/src-tauri/src/: auth_token.rs  lib.rs  main.rs  python_bridge.rs  system_info.rs  telemetry.rs
rocky-ui/src/app/: layout.tsx  page.tsx
rocky-ui/src/hooks/: useRocky.ts
scripts/: deploy.sh  rocky.service
