[package]
name = "rocky-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "rocky_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rocky-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
uuid = { version = "1.10", features = ["v4"] }
sysinfo = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["url"] }
url = "2.5"
futures-util = "0.3"
